tests/machine/x/scala/group_by_having.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by_having.scala:5: error: type mismatch;
 found   : List[scala.collection.immutable.Map[String,Any]]
 required: Map[String,Any]
    println(scala.util.parsing.json.JSONObject(big).toString())
                                               ^
one error found
